--- a/HomePage/index.css
+++ b/HomePage/index.css
@@ -42,6 +42,11 @@ div {
   font-family: Menlo, monospace;
 }
 
+img {
+  height: 50px;
+  width: 50px;
+}
+
 @keyframes wave-animation {
   0%,
   100% {
