--- a/Whatisthis/style.css
+++ b/Whatisthis/style.css
@@ -5,17 +5,22 @@ header {
   text-align: center;
 }
 
-div {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
   width: 100%;
   background-color: purple;
   line-height: 1.3;
   font-family: Menlo, monospace;
   color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
 }
 
 h2,
