--- a/TwoSum/twosum.css
+++ b/TwoSum/twosum.css
@@ -12,12 +12,22 @@ header {
   text-align: center;
 }
 
+footer {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+
 main {
+  position: relative;
+  overflow: hidden;
+  background-color: purple;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100%;
+  height: 80%;
   width: 100%;
   background-color: purple;
   line-height: 1.3;
@@ -29,16 +39,31 @@ main {
   position: absolute;
   top: 50%;
   left: -100px;
-  animation: moveR2D2 5s linear forwards;
+  animation: moveR2D2 5s linear forwards infinite;
 }
 
 .r2d2 {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
 }
 
 @keyframes moveR2D2 {
   to {
     left: calc(100% + 100px);
   }
+}
+
+button#twoSumButton {
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px 40px;
+  background-color: #333;
+  color: white;
+  font-size: 16px;
+}
+
+#valueHere {
+  text-align: center;
 }
