--- a/TwoSum/twosum.css
+++ b/TwoSum/twosum.css
@@ -3,6 +3,8 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: Menlo, monospace;
+  color: white;
 }
 
 header {
@@ -10,6 +12,17 @@ header {
   color: white;
   padding: 10px;
   text-align: center;
+}
+
+a {
+  background-color: #333;
+  color: white;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+a:hover {
+  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
 }
 
 footer {
@@ -22,7 +35,6 @@ footer {
 main {
   position: relative;
   overflow: hidden;
-  background-color: purple;
   display: flex;
   flex-direction: column;
   align-items: center;
