--- a/WhackaWookie/WhackaWookie.css
+++ b/WhackaWookie/WhackaWookie.css
@@ -12,6 +12,32 @@ body {
 main {
   background-color: purple;
 }
+
+header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+a:hover {
+  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  border-top: 20px solid purple;
+}
+
 .start {
   text-align: center;
 }
@@ -62,9 +88,15 @@ h1 {
 .hole.up .wookie {
   top: 0;
 }
+
 button {
-  background: rgba(190, 19, 19, 0.2);
-  border: red;
-  font-size: 3rem;
-  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  background-color: #333;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%);
 }
