--- a/Whatisthis/style.css
+++ b/Whatisthis/style.css
@@ -23,6 +23,10 @@ a {
   box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
 }
 
+a:hover {
+  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+}
+
 h2,
 h4,
 p {
